订单管理的前端页面

--- a/ssm/src/main/webapp/WEB-INF/pages/order_list.html
+++ b/ssm/src/main/webapp/WEB-INF/pages/order_list.html
@@ -6,11 +6,20 @@
 </head>
 <body>
 管理平台 >>工单管理
-下单日期:<input class="easyui-datetimebox" id="starttime" name="starttime" style="width:150px"/>
-        <input type="text"/> <button>查询</button>
-        <table>
-            <tr><th>全部</th><th>待确认</th><th>带完工</th><th>待验收</th><th>异常</th></tr>
-        </table>
+下单日期:<input class="easyui-datetimebox" id="starttime" name="starttime" style="width:150px"/></br>
+<input type="text"/> <button>查询</button></br>
+<table border="1" width="100%" color="blue">
+    <tr><td><button>全部</button></td><td><button>待确认</button></td><td><button>带完工</button></td><td><button>待验收</button></td><td><button>异常</button></td></tr>
+</table></br>
+<table border="1" width="100%" color="blue">
+    <tr><th><button>序号</button></th><th><button>订单编号</button></th><th><button>达人名称</button></th><th><button>工单编号</button></th><th><button>工种</button></th></tr>
+    <tr><td>1</td><td>001</td><td>晓杰</td><td>001-1</td><td>普工</td></tr>
+    <tr><td>2</td><td>002</td><td>晓明</td><td>001-2</td><td>技工</td></tr>
+    <tr><td>3</td><td>003</td><td>晓玉</td><td>001-3</td><td>普工</td></tr>
+    <tr><td>4</td><td>004</td><td>小杰</td><td>001-1</td><td>普工</td></tr>
+    <tr><td>5</td><td>005</td><td>小明</td><td>001-2</td><td>技工</td></tr>
+    <tr><td>6</td><td>006</td><td>小玉</td><td>001-3</td><td>普工</td></tr>
+</table>
 </body>
 <script>
 //    container.append('开始时间<input class="easyui-datatimebox" id="starttime" name="starttime" style="width: 150px"/>')
