--- a/ssm/src/main/webapp/WEB-INF/pages/order.html
+++ b/ssm/src/main/webapp/WEB-INF/pages/order.html
@@ -15,13 +15,23 @@
         <div id="tt" class="easyui-tabs"  data-options="fit:true,border:false">
             <div title="订单管理" style="padding:10px;">
                 管理平台 >>工单管理
-                下单日期:<input class="easyui-datetimebox" id="starttime" name="starttime" style="width:150px"/>
-                <br>
-                <input type="text"/> <button>查询</button>
-                <table border="1">
-                    <tr><td>全部</td><td>待确认</td><td>带完工</td><td>待验收</td><td>异常</td></tr>
+                下单日期:<input class="easyui-datetimebox" id="starttime" name="starttime" style="width:150px"/><br/><br/><br/>
+                <input type="text"/> <button>查询</button><br/><br/>
+                <table border="1" width="100%" color="blue">
+                    <tr><td><button>全部</button></td><td><button>待确认</button></td><td><button>带完工</button></td><td><button>待验收</button></td><td><button>异常</button></td></tr>
+                </table><br/><br/>
+                <table border="1" width="100%" color="blue">
+                    <tr><th><button>序号</button></th><th><button>订单编号</button></th><th><button>达人名称</button></th><th><button>订单编号</button></th><th><button>工种</button></th></tr>
+                    <tr><td>1</td><td>001</td><td>晓杰</td><td>001-1</td><td>普工</td></tr>
+                    <tr><td>2</td><td>002</td><td>晓明</td><td>001-2</td><td>技工</td></tr>
+                    <tr><td>3</td><td>003</td><td>晓玉</td><td>001-3</td><td>普工</td></tr>
+                    <tr><td>4</td><td>004</td><td>小杰</td><td>001-1</td><td>普工</td></tr>
+                    <tr><td>5</td><td>005</td><td>小明</td><td>001-2</td><td>技工</td></tr>
+                    <tr><td>6</td><td>006</td><td>小玉</td><td>001-3</td><td>普工</td></tr>
                 </table>
+
             </div>
+
             <div title="会员管理" data-options="selected:true" style="padding:10px;">
                 会员管理
             </div>
